implement entire endpoint that planned with module leave-management